<resources>
    <string name="adView_download" translatable="false">ca-app-pub-2231903967147229/3979252935</string>
    <string name="adView_main" translatable="false">ca-app-pub-2231903967147229/5894969838</string>
    <string name="adView_setting" translatable="false">ca-app-pub-2231903967147229/6396095920</string>
    <string name="button_block_add">Block\nAdd</string>
    <string name="button_block_delete">Block\nDelete</string>
    <string name="button_block_merge">Block\nMerge</string>
    <string name="button_block_setting">Block\nSetting</string>
    <string name="button_block_split">Block\nSplit</string>
    <string name="button_color_default">Reset Default Color</string>
    <string name="button_color_minus" translatable="false">-</string>
    <string name="button_color_plus" translatable="false">+</string>
    <string name="button_copied_upDown">Vertical Rotation</string>
    <string name="button_copied_leftRight">Horizontal Rotation</string>
    <string name="button_download_filter">Filter</string>
    <string name="button_edit_copy">Copy\nSelected Area</string>
    <string name="button_edit_cut">Cut\nSelected Area</string>
    <string name="button_edit_delete">Delete\nSelected Area</string>
    <string name="button_edit_leftRight">Horizontal\nRotation\nSelected Area</string>
    <string name="button_edit_paste">Paste</string>
    <string name="button_edit_redo">Redo</string>
    <string name="button_edit_undo">Undo</string>
    <string name="button_edit_upDown">Vertical\nRotation\nSelected Area</string>
    <string name="button_file_download">Sample\nucs File\nDownload</string>
    <string name="button_file_new">New\nucs File</string>
    <string name="button_file_open">Open\nucs File</string>
    <string name="button_file_rename">Rename\nucs File</string>
    <string name="button_file_save">Save</string>
    <string name="button_file_saveAs">Save as</string>
    <string name="button_move_bottom">Move\nBottom Row</string>
    <string name="button_move_lowerBeat">Move\nbelow %1$d Rows</string>
    <string name="button_move_lowerBlock">Move\nbelow Block</string>
    <string name="button_move_lowerRow">Move\nbelow Row</string>
    <string name="button_move_top">Move\nTop Row</string>
    <string name="button_move_upperBlock">Move\nabove Block</string>
    <string name="button_move_upperBeat">Move\nabove %1$d Rows</string>
    <string name="button_move_upperRow">Move\nabove Row</string>
    <string name="button_other_interrupt">Interrupt\nPlaying</string>
    <string name="button_other_playInitially">Play at\nInitial Row</string>
    <string name="button_other_playCurrently">Play at\nPointer</string>
    <string name="button_other_setting">Setting</string>
    <string name="button_other_zoom">Change\nZoom</string>
    <string name="button_scroll_pointer">Scroll to\nPointer</string>
    <string name="checkBox_play_confirmation">Don\'t show again</string>
    <string name="common_appName" translatable="false">PIU ucs Editor</string>
    <string name="common_beat" translatable="false">Beat</string>
    <string name="common_bpm" translatable="false">BPM</string>
    <string name="common_delay" translatable="false">Delay</string>
    <string name="common_ms" translatable="false">(ms)</string>
    <string name="common_range" translatable="false">~</string>
    <string name="common_rowLength">Row Length</string>
    <string name="common_split" translatable="false">Split</string>
    <string name="common_to" translatable="false">→</string>
    <string name="dialog_button_destroy">Destroy</string>
    <string name="dialog_message_blockDelete">The block at the pointer is going to be deleted.Do you want to delete it?</string>
    <string name="dialog_message_blockMerge">The block at the pointer and its just below block are going to be merged. Do you want to merge them?\nThe block settings are changed based on the former block except the row length.</string>
    <string name="dialog_message_blockSplit">The block is going to be split between the row at the pointer and its just below row. Do you want to split it?</string>
    <string name="dialog_message_destroy">The chart data is changed.Do you destroy it?\nIf you want to destroy it, the hold data you are setting is destroyed.</string>
    <string name="dialog_message_endOfUcsError">The end of your chosen ucs file was achieved at the %1$d-th line. Please check it again.</string>
    <string name="dialog_message_illegalUcsFormatError">Illegal format was detected in your chosen ucs file when the %1$d-th line had reading. Please check it again.</string>
    <string name="dialog_title_changeUcsName">Rename ucs File</string>
    <string name="dialog_title_createNewUcs">Create New ucs File</string>
    <string name="dialog_title_destroy">Destroy Changed Chart</string>
    <string name="dialog_title_checkPasteNotes">Check Pasted Notes</string>
    <string name="dialog_title_selectDirectory">Select Directory</string>
    <string name="dialog_title_selectUcsFile">Select ucs File</string>
    <string name="dialog_title_ucsReadError">ucs File Opening Error</string>
    <string name="editText_beat_default" translatable="false">4</string>
    <string name="editText_bpm_default" translatable="false">120.0</string>
    <string name="editText_delay_default" translatable="false">0.0</string>
    <string name="editText_ucsName_default" translatable="false">new</string>
    <string name="editText_rowLength_default" translatable="false">400</string>
    <string name="editText_split_default" translatable="false">2</string>
    <string name="radioButton_newUcs_single" translatable="false">Single</string>
    <string name="radioButton_newUcs_singlePerformance" translatable="false">Single Performance</string>
    <string name="radioButton_newUcs_double" translatable="false">Double</string>
    <string name="radioButton_newUcs_doublePerformance" translatable="false">Double Performance</string>
    <string name="radioButton_zoom_0_125" translatable="false">x0.125</string>
    <string name="radioButton_zoom_0_25" translatable="false">x0.25</string>
    <string name="radioButton_zoom_0_5" translatable="false">x0.5</string>
    <string name="radioButton_zoom_1_0" translatable="false">x1.0</string>
    <string name="radioButton_zoom_2_0" translatable="false">x2.0</string>
    <string name="radioButton_zoom_4_0" translatable="false">x4.0</string>
    <string name="radioButton_zoom_8_0" translatable="false">x8.0</string>
    <string-array name="spinner_entries">
        <item>Move</item>
        <item>Edit</item>
        <item>Block</item>
        <item>File</item>
        <item>Other</item>
    </string-array>
    <string name="textView_actionBar_asterisk" translatable="false">%1$s*</string>
    <string name="textView_blockAdd_message">Please input the block setting you want to add, and press OK button.\nThe block is going to be inserted at the split between the row at the pointer and its just below row.</string>
    <string name="textView_bpm_float" translatable="false">BPM:%1$.2f</string>
    <string name="textView_bpm_string" translatable="false">BPM:%1$s</string>
    <string name="textView_color_alpha" translatable="false">Alpha:%1$d</string>
    <string name="textView_color_blue" translatable="false">Blue:%1$d</string>
    <string name="textView_color_green" translatable="false">Green:%1$d</string>
    <string name="textView_color_red" translatable="false">Red:%1$d</string>
    <string name="textView_connectionError">Connection was failed.\nPlease check your connection environment.</string>
    <string name="textView_copiedChart_message">Notes are going to be pasted as follows at the pointer.\nIf you do not mind, please OK button.\nIf you want to execute vertical or horizontal rotation, please press vertical or horizontal button, and press OK button.</string>
    <string name="textView_delay_float" translatable="false">Delay:%1$.2f(ms)</string>
    <string name="textView_filter_artistName">Artist Name</string>
    <string name="textView_filter_message">Please input conditions filtering sample ucs files, and press OK button.\nIt regards no condition if you don\'t input.</string>
    <string name="textView_filter_songName">Song Name</string>
    <string name="textView_filter_songVersion">Version</string>
    <string name="textView_filter_versionUnspecified">Unspecified</string>
    <string name="textView_gettingSamples">Getting Sample ucs File Information…</string>
    <string name="textView_gettingVersions">Getting Version Information…</string>
    <string name="textView_htmlFormatError">It seems to change Web pages download sample uce files.\nPlease contact the developer.</string>
    <string name="textView_listView_subTitle_left">Left Side</string>
    <string name="textView_listView_subTitle_right">Right Side</string>
    <string name="textView_listView_title_blockEvenColor">Even Block Color</string>
    <string name="textView_listView_title_blockOddColor">Odd Block Color</string>
    <string name="textView_listView_title_blockTextColor">Block Information Text Color</string>
    <string name="textView_listView_title_buttonsPosition">Buttons Display Position</string>
    <string name="textView_listView_title_frameColor">Frame Color</string>
    <string name="textView_listView_title_license">License</string>
    <string name="textView_listView_title_pointerColor">Pointer Color</string>
    <string name="textView_listView_title_pointerSelectedColor">Pointer Color(Select Mode)</string>
    <string name="textView_listView_title_selectedAreaColor">Selected Area Color</string>
    <string name="textView_listView_title_vibration">Vibration</string>
    <string name="textView_newUcs_mode">Mode</string>
    <string name="textView_newUcs_name">ucs File Name(No Extension .ucs Required)</string>
    <string name="textView_split_short" translatable="false">Split:%1$d</string>
    <string name="textView_play_confirmation">If you set Note Sound ON, there is a possibility that note sound and BGM may not be synchronized.\nIf they are done, please interrupt playing and play again.</string>
    <string name="textView_zoom_message">Please choose zoom of the chart you want to change, and press OK button.\nIt may take some time for the zoom setting to take effect.</string>
    <string name="toast_blockDeleteError">Block Delete was failed because there exists only one block</string>
    <string name="toast_blockMergeError">Block Merge was failed because the pointer exists at the last block</string>
    <string name="toast_blockSplitError">Block Split was failed because the pointer exists at the top row</string>
    <string name="toast_copyFinished">Copy Finished</string>
    <string name="toast_download">Download to\n%1$s</string>
    <string name="toast_filteringError_notFound">There is no sample ucs file matching the filtering condition</string>
    <string name="toast_formatError_beat">Please input integer between 1 and 64 at Beat</string>
    <string name="toast_formatError_bpm">Please input decimal between 0.1 and 999 at BPM</string>
    <string name="toast_formatError_delay">Please input decimal between -999999 and 999999 at Delay</string>
    <string name="toast_formatError_fileName">Illegal ucs file name is inputted</string>
    <string name="toast_formatError_rowLength">Please input integer over 1 at Row Length</string>
    <string name="toast_formatError_split">Please input integer between 1 and 128 at Split</string>
    <string name="toggleButton_edit_lockOff">Edit Lock\nOFF</string>
    <string name="toggleButton_edit_lockOn">Edit Lock\nON</string>
    <string name="toggleButton_edit_selectOff">Select Mode\nOFF</string>
    <string name="toggleButton_edit_selectOn">Select Mode\nON</string>
    <string name="toggleButton_other_noteSoundOff">Note Sound\nOFF</string>
    <string name="toggleButton_other_noteSoundOn">Note Sound\nON</string>
</resources>