<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/newUcsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView_newUcs_name"/>

        <EditText
            android:id="@+id/newUcsFileName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:text="@string/editText_ucsName_default"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView_newUcs_mode"/>

        <RadioGroup
            android:id="@+id/newUcsRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/newUcsSingle">

            <RadioButton
                android:id="@+id/newUcsSingle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radioButton_newUcs_single"/>

            <RadioButton
                android:id="@+id/newUcsSinglePerformance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radioButton_newUcs_singlePerformance"/>

            <RadioButton
                android:id="@+id/newUcsDouble"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radioButton_newUcs_double"/>

            <RadioButton
                android:id="@+id/newUcsDoublePerformance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radioButton_newUcs_doublePerformance"/>

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/common_rowLength"/>

        <EditText
            android:id="@+id/newUcsRowLength"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text="@string/editText_rowLength_default"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/common_bpm"/>

        <EditText
            android:id="@+id/newUcsBpm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:text="@string/editText_bpm_default"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/common_delay"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/newUcsDelay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/newUcsDelayMs"
                android:layout_toStartOf="@+id/newUcsDelayMs"
                android:layout_centerVertical="true"
                android:inputType="numberDecimal|numberSigned"
                android:text="@string/editText_delay_default"/>

            <TextView
                android:id="@+id/newUcsDelayMs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="@string/common_ms"/>
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/common_beat"/>

        <EditText
            android:id="@+id/newUcsBeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text="@string/editText_beat_default"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/common_split"/>

        <EditText
            android:id="@+id/newUcsSplit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text="@string/editText_split_default"/>

    </LinearLayout>

</ScrollView>